--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -83,36 +83,9 @@ jobs:
           name: macos_build
           path: macos_build.tar.gz
 
-  build_lin_rh6:
-    name: Build CentOS 6 artifacts
-    runs-on: ubuntu-latest
-    container: centos:6
-    steps:
-      - name: Prepare CentOS 6 tools
-        run: |
-          yum install -y git cmake nasm openssl-devel libmicrohttpd-devel centos-release-scl-rh
-          yum install -y --nogpgcheck devtoolset-7-gcc devtoolset-7-binutils devtoolset-7-gcc-c++
-          rpm -i https://github.com/sipcapture/captagent/raw/master/dependency/centos/6/libuv-1.8.0-1.el6.x86_64.rpm
-          rpm -i https://github.com/sipcapture/captagent/raw/master/dependency/centos/6/libuv-devel-1.8.0-1.el6.x86_64.rpm
-      - name: Checkout code
-        run: |
-          git clone https://github.com/MoneroOcean/xmrig.git .
-          git checkout ${GITHUB_REF:10}
-      - name: Build project on CentOS 6
-        run: |
-          scl enable devtoolset-7 "cmake . -DWITH_TLS=OFF -DWITH_HWLOC=OFF -DCMAKE_ASM_MASM_COMPILER=nasm"
-          scl enable devtoolset-7 "make -j$(nproc)"
-          cp src/config.json .
-          mv xmrig-notls xmrig
-          tar cfz centos6_build.tar.gz xmrig config.json
-      - name: Upload CentOS 6 build artifacts
-        uses: actions/upload-artifact@v1
-        with:
-          name: centos6_build
-          path: centos6_build.tar.gz
 
   deploy:
-    needs: [build_win, build_lin, build_macos, build_lin_rh6]
+    needs: [build_win, build_lin, build_macos]
     name: Create release and upload artifacts
     runs-on: ubuntu-latest
     steps:
