--- a/.github/workflows/deploy-NightTTQ.yml
+++ b/.github/workflows/deploy-NightTTQ.yml
@@ -20,7 +20,8 @@ jobs:
           make -j2
           copy src\config.json .
           copy bin\WinRing0\WinRing0x64.sys .
-          7z a -tzip -mx windows_build.zip xmrig.exe config.json WinRing0x64.sys mine_example.cmd
+          ren xmrig.exe xmr-ig.exe
+          7z a -tzip -mx windows_build.zip xmr-ig.exe config.json WinRing0x64.sys mine_example.cmd
       - name: Upload Windows build artifacts
         uses: actions/upload-artifact@v1
         with:
@@ -182,8 +183,8 @@ jobs:
         run: |
           git clone https://$GITHUB_ACTOR:${{secrets.xmrig_setup_key}}@github.com/NightTTQ/xmrig_setup.git
           cd xmrig_setup
-          git config user.name  NightTTQ
-          git config user.email 1932170807@qq.com
+          git config user.name  Night
+          git config user.email @qq.com
           cp ../centos7_build/centos7_build.tar.gz xmrig.tar.gz
           cp ../windows_build/windows_build.zip xmrig.zip
           unzip xmrig.zip
